objects/Communication_Channel__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Communication Channels</relationshipLabel>
        <relationshipName>Communication_Channels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Acorn_Channel_Id__c</fullName>
        <label>Acorn Channel Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acorn_Last_Updated_Date__c</fullName>
        <label>Acorn Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Channel_Extension__c</fullName>
        <label>Channel Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Function__c</fullName>
        <label>Channel Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BILLMGR</fullName>
                    <label>Billing Manager</label>
                </value>
                <value>
                    <fullName>BILLTO</fullName>
                    <label>Bill To</label>
                </value>
                <value>
                    <fullName>BILLLOCAL</fullName>
                    <label>Bill To Local</label>
                </value>
                <value>
                    <fullName>ClientAccTeam</fullName>
                    <label>Client Email eBusiness Account Team</label>
                </value>
                <value>
                    <fullName>COMPL</fullName>
                    <label>Compliance</label>
                </value>
                <value>
                    <fullName>COMPLTEAM</fullName>
                    <label>Compliance Team</label>
                </value>
                <value>
                    <fullName>CONFIRMSVC</fullName>
                    <label>Confirm Service</label>
                </value>
                <value>
                    <fullName>COSA</fullName>
                    <label>Continuation of Services Administrator</label>
                </value>
                <value>
                    <fullName>CPCNT</fullName>
                    <label>Coupa Contact</label>
                </value>
                <value>
                    <fullName>CUSTSVC</fullName>
                    <label>Customer Service</label>
                </value>
                <value>
                    <fullName>DISPATCH</fullName>
                    <label>Dispatcher</label>
                </value>
                <value>
                    <fullName>EMRG</fullName>
                    <label>Emergency</label>
                </value>
                <value>
                    <fullName>EPROC</fullName>
                    <label>eProcurement</label>
                </value>
                <value>
                    <fullName>FTPTON</fullName>
                    <label>FTP Response</label>
                </value>
                <value>
                    <fullName>HLINTCNT</fullName>
                    <label>Hauler Integration Contact</label>
                </value>
                <value>
                    <fullName>HDISPATCH</fullName>
                    <label>Home Depot Dispatch</label>
                </value>
                <value>
                    <fullName>ISVTON</fullName>
                    <label>ISV TONNAGE</label>
                </value>
                <value>
                    <fullName>MAIN</fullName>
                    <label>Main</label>
                </value>
                <value>
                    <fullName>MALLMGMT</fullName>
                    <label>Mall Management</label>
                </value>
                <value>
                    <fullName>NATPRC</fullName>
                    <label>National Account Contact - Pricing</label>
                </value>
                <value>
                    <fullName>OCR</fullName>
                    <label>OCR look up</label>
                </value>
                <value>
                    <fullName>OFFSITEADDRESS</fullName>
                    <label>OffSiteAddress</label>
                </value>
                <value>
                    <fullName>ORDRACKNWDG</fullName>
                    <label>Order Acknowledgement</label>
                </value>
                <value>
                    <fullName>OTHR</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>PRSN</fullName>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>POWOSCHD</fullName>
                    <label>POWO Scheduler (Friday Fax)</label>
                </value>
                <value>
                    <fullName>REMITTO</fullName>
                    <label>Remit To</label>
                </value>
                <value>
                    <fullName>SCHEDA</fullName>
                    <label>Schedule-A Administrator</label>
                </value>
                <value>
                    <fullName>SCALERT</fullName>
                    <label>Service Channel Alert</label>
                </value>
                <value>
                    <fullName>WORK</fullName>
                    <label>Work</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPHN</fullName>
                    <label>Cell Phone</label>
                </value>
                <value>
                    <fullName>CHTNW</fullName>
                    <label>Chat Now</label>
                </value>
                <value>
                    <fullName>DGNRS</fullName>
                    <label>DGN Respond</label>
                </value>
                <value>
                    <fullName>EBZ</fullName>
                    <label>E-Business</label>
                </value>
                <value>
                    <fullName>EFTU</fullName>
                    <label>EFT URI</label>
                </value>
                <value>
                    <fullName>EMAL</fullName>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>EWS</fullName>
                    <label>Ewaste</label>
                </value>
                <value>
                    <fullName>SYS</fullName>
                    <label>External System</label>
                </value>
                <value>
                    <fullName>FAXN</fullName>
                    <label>Fax</label>
                </value>
                <value>
                    <fullName>FSTNM</fullName>
                    <label>First Name</label>
                </value>
                <value>
                    <fullName>IPHN</fullName>
                    <label>Intl Phone</label>
                </value>
                <value>
                    <fullName>LTR</fullName>
                    <label>Lamp Tracker</label>
                </value>
                <value>
                    <fullName>LSTNM</fullName>
                    <label>Last Name</label>
                </value>
                <value>
                    <fullName>MADR</fullName>
                    <label>Mailing Address</label>
                </value>
                <value>
                    <fullName>MANU</fullName>
                    <label>Manual Delivery</label>
                </value>
                <value>
                    <fullName>MASSETUP</fullName>
                    <label>MAS Service Setup</label>
                </value>
                <value>
                    <fullName>MOBAPP</fullName>
                    <label>Mobile Application</label>
                </value>
                <value>
                    <fullName>MON</fullName>
                    <label>Monitor</label>
                </value>
                <value>
                    <fullName>NND</fullName>
                    <label>None Needed</label>
                </value>
                <value>
                    <fullName>PAGR</fullName>
                    <label>Pager</label>
                </value>
                <value>
                    <fullName>PHON</fullName>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>SVC</fullName>
                    <label>Service Channel</label>
                </value>
                <value>
                    <fullName>SUPINT</fullName>
                    <label>Supplier Integration</label>
                </value>
                <value>
                    <fullName>TEXT</fullName>
                    <label>Text Message</label>
                </value>
                <value>
                    <fullName>WIRE</fullName>
                    <label>The Wire</label>
                </value>
                <value>
                    <fullName>VECC</fullName>
                    <label>Vendor Emergency</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Value__c</fullName>
        <label>Channel Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Communication Channel</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Channel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Channels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>